// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyDetails component when the date is after out of hours should show the link should render properly 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <h1
      class="lbh-heading-h1 govuk-!-margin-bottom-2"
    >
      Dwelling: 16 Pitcairn House
    </h1>
    <div>
      <span
        class="lbh-heading-h2 text-green"
      >
        <a
          class="lbh-link"
          href="/properties/00012345/raise-repair/new"
        >
          <strong>
            Raise a work order on this dwelling
          </strong>
        </a>
      </span>
    </div>
    <div>
      <a
        class="lbh-link lbh-body-l lbh-!-font-weight-medium"
        href="https://hackney.gov.uk"
        rel="noopener"
        target="_blank"
      >
        Out of hours note
      </a>
    </div>
    <div
      class="govuk-grid-row"
    >
      <div
        class="govuk-grid-column-one-half-from-desktop"
      >
        <div
          class="lbh-body-s"
        >
          <div
            class="property-details-main-section"
          >
            <span
              class="govuk-!-font-size-14"
            >
              Property details
            </span>
            <br />
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </div>
          <ul
            class="lbh-list hackney-property-alerts"
            style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
          >
            <li
              class="bg-dark-green"
            >
              Tenure: Secure
            </li>
            <span
              class="govuk-error-message lbh-error-message"
              data-error-id=""
              data-testid="error-message"
            >
              <span
                class="govuk-visually-hidden"
              >
                Error:
              </span>
               Error loading boiler house details status undefined with message: undefined
            </span>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PropertyDetails component when the date is before out of hours does not show the link should render properly 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <h1
      class="lbh-heading-h1 govuk-!-margin-bottom-2"
    >
      Dwelling: 16 Pitcairn House
    </h1>
    <div>
      <span
        class="lbh-heading-h2 text-green"
      >
        <a
          class="lbh-link"
          href="/properties/00012345/raise-repair/new"
        >
          <strong>
            Raise a work order on this dwelling
          </strong>
        </a>
      </span>
    </div>
    <div
      class="govuk-grid-row"
    >
      <div
        class="govuk-grid-column-one-half-from-desktop"
      >
        <div
          class="lbh-body-s"
        >
          <div
            class="property-details-main-section"
          >
            <span
              class="govuk-!-font-size-14"
            >
              Property details
            </span>
            <br />
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </div>
          <ul
            class="lbh-list hackney-property-alerts"
            style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
          >
            <li
              class="bg-dark-green"
            >
              Tenure: Secure
            </li>
            <span
              class="govuk-error-message lbh-error-message"
              data-error-id=""
              data-testid="error-message"
            >
              <span
                class="govuk-visually-hidden"
              >
                Error:
              </span>
               Error loading boiler house details status undefined with message: undefined
            </span>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
